--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
 
 .board {
   background: rgb(88, 88, 88);
-
+  position: relative;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
 }
@@ -27,4 +27,16 @@
   cursor: pointer;
   height: 150px;
   width: 150px;
+}
+
+.win-msg {
+  position: absolute;
+  width: 100%;
+  background: #131212c2;
+  height: 100%;
+  margin: 0;
+  align-items: center;
+  color: #fff;
+  font-size: 32px;
+  display: grid;
 }
